# bakelite

./: .gitignore  .isort.cfg  .mypy.ini  .pylint.ini  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: lint.yaml  test.yaml
bakelite/: __init__.py
bakelite/generator/: __init__.py  cli.py  cpptiny.py  parser.py  protodef.lark  python.py  types.py  util.py
bakelite/generator/runtimes/cpptiny/: bakelite.h  cobs.h  crc.h  declarations.h  serializer.h
bakelite/generator/templates/: cpptiny-bakelite.h.j2  cpptiny.h.j2  python.py.j2
bakelite/proto/: __init__.py  crc.py  framing.py  parser.py  protodef.lark  runtime.py  serialization.py  types.py
bakelite/proto/generator/: cpptiny.py  python.py
bakelite/proto/generator/templates/: cpptiny.h.j2  python.py.j2
bakelite/tests/: conftest.py
bakelite/tests/generator/: .gitignore  Makefile  cpptiny-framing.cpp  cpptiny-protocol.cpp  cpptiny-serialization.cpp  cpptiny.cpp  cpptiny.h  proto.bakelite  struct.ex
bakelite/tests/proto/: protocol.ex  struct.ex  test.ex  test_framing.py  test_protocol.py  test_serialization.py  test_validation.py
cpp/: Makefile  bakelite.h  newtypes.h  test  test.cpp  test.py  types.h
docs/: cpptiny.md  index.md  protocol.md  python.md  quickstart.md  requirements.txt  tutorial.md
examples/: ReadMe.md
examples/arduino/: Makefile  ReadMe.md  arduino.ino  bakelite.h  proto.bakelite  proto.h  proto.py  test.py
hwplatform/: __init__.py
hwplatform/proto/: __init__.py  framing.py  parser.py  protodef.lark  runtime.py  serialization.py  types.py
hwplatform/proto/generator/: python.py
hwplatform/proto/generator/templates/: python.py.j2
hwplatform/tests/proto/: struct.ex  test_framing.py  test_serialization.py
tests/: __init__.py  conftest.py
