[tool.poetry]

name = "bakelite"
version = "0.3.0"
description = "A utility that makes it simple to communicate with your firmware."

license = "MIT"

authors = ["Brendan Powers <brendan0powers@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/bakelite"
documentation = "https://bakelite.readthedocs.io"
repository = "https://github.com/brendan0powers/bakelite"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator"
]

[tool.poetry.dependencies]

python = "^3.8"
lark = "^0.12.0"
jinja2 = "^3"
dataclasses-json = "^0.5.2"
bitstring = "^3.1.7"
click = "^8.0.3"


[tool.poetry.dev-dependencies]

# Formatters
black = "19.10b0"
isort = "4.3.21"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.4.5"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = "~1.3"
pygments = "^2.5.2"

# Tooling
#pyinstaller = "^4.7"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

# Examples
pyserial = "*"
types-setuptools = "^57.4.5"
autopep8 = "^1.6.0"

[tool.poetry.scripts]

bakelite = "bakelite.generator.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.autopep8]
indent_size = 2
max_line_length = 100